[tool.poetry]
name = "pynoo"
version = "1.4.4"
description = "Easily create new projects."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
repository = "https://github.com/py-noo/noo"
readme = "README.md"
packages = [
    { include = "noo" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
typer = "^0.4.0"
pydantic = "^1.9.0"
PyYAML = "^6.0"
tomli = "^1.2.3"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.1"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
noo = "noo:app"

[tool.taskipy.tasks]
lint = "black . && isort --profile black ."
pre-commit = "pre-commit install --hook-type commit-msg"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
